testsuite/tests/typecheck/should_fail/T18640c.stderr

T18640c.hs:14:11: error:
    • Couldn't match kind ‘x’ with ‘*’
      Expected kind ‘forall (k1 :: k) -> x’,
        but ‘F1’ has kind ‘forall (k1 :: k) -> *’
      ‘x’ is a rigid type variable bound by
        the type synonym declaration for ‘F2’
        at T18640c.hs:13:19
    • In the type ‘F1’
      In the type declaration for ‘F2’
